fix(app): update index

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Danilo Andrade | Actor</title>
+    <title>Danilo Andrade | Trained Actor</title>
   </head>
   <body>
     <div id="root"></div>
