fix(app): add SEO missing issues

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/da.svg" />
     <meta
+      name="description"
+      content="Danilo Andrade is a trained actor born in Sao Paolo based in Berlin."
+    />
+    <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
