fix(app): add logo back & fix css issues

--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <link rel="icon" type="image/svg+xml" href="/da.svg" />
     <meta
       name="description"
-      content="Danilo Andrade is a trained actor born in Sao Paolo based in Berlin."
+      content="Danilo Andrade is a trained actor born in Sao Paolo and based in Berlin with experience working in movies, tv shows, and theatre."
     />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0"
     />
-    <title>Danilo Andrade | Trained Actor Test</title>
+    <title>Danilo Andrade | Trained Actor</title>
   </head>
   <body>
     <div id="root"></div>
