fix: update id google analytics

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         dataLayer.push(arguments);
       }
       gtag('js', new Date());
-      gtag('config', 'G-29440DGD42');
+      gtag('config', 'G-GH7VF9FRSH');
     </script>
     <title><%= htmlWebpackPlugin.options.title %></title>
   </body>
