--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script
       async
-      src="https://www.googletagmanager.com/gtag/js?id=G-29440DGD42"
+      src="https://www.googletagmanager.com/gtag/js?id=G-GH7VF9FRSH"
     ></script>
     <script>
       window.dataLayer = window.dataLayer || [];
